--- a/src/Gradebook/Gradebook.Web/wwwroot/app.css
+++ b/src/Gradebook/Gradebook.Web/wwwroot/app.css
@@ -139,3 +139,8 @@ h1:focus {
 .dropdown-item-subtitle {
     font-size: .9rem;
 }
+
+.tt-entry:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.12), 0px 4px 8px 2px rgb(89 74 226 / 33%)
+}
